Fri Jun  7 14:39:01 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/SOCK_Dgram_Test.cpp:

          Potential fix for a warning on the wchar scoreboard.

Thu Jun  6 17:02:06 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * include/makeinclude/rules.lib.GNU:

          The rule for generating versioned_so=2 style libraries would create
          names such as "-6.2.0.so" in cases where the SHLIB was reset to empty,
          for instance if a precondition isn't met. As an example, ACE_TkReactor
          should skip the build if macro tk=1 isn't set. but with versioned_so=2
          the VSHLIB target was non-empty so the build was attempted. Now the
          VSHLIB and related targets are modified only if the source libname
          is not empty.

Wed Jun  5 20:09:59 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/FlReactor_Test.cpp:
        * tests/QtReactor_Test.cpp:

          Fixed wchar build compile errors

Fri May 31 14:02:11 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ETCL/ETCL_Constraint.inl:
          Fixed coverity warning

Thu May 30 18:50:44 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Malloc_Allocator.h:
        * ace/Shared_Memory_Pool.h:
          Doxygen changes

        * ace/Shared_Memory_Pool.cpp:
          Fixed Coverity 300041 Dereference after null check

Wed May 29 03:35:59 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Connector.h: Used reinterpret_cast<const
          peer_addr_type&>(peer_addr_type::sap_any) instead of C cast to
          avoid a warning when compiling with -Wcast-qual.  Thanks to
          Milan Cvetkovic <milan dot cvetkovic at mpathix dot com> for
          reporting this.

Wed May 29 13:57:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
        * tests/run_test.pl:
          Commented out setting of the Coverity environment variables