@@ -1,3 +1,10 @@
+Tue Jun 18 07:16:22 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Compiler_Features_21_Test.cpp:
+        * tests/run_test.lst:
+        * tests/tests.mpc:
+          Added new C++11 compiler feature test
+
 Fri Jun  7 14:39:01 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tests/SOCK_Dgram_Test.cpp:
